# autoGame-xcx

./: .gitignore  README.md  README_Phase1.md  README_Phase2.md  __init__.py  basic_test.py  demo_matching_test.py  main.py  pyproject.toml  requirements.txt  setup.py  simple_dpi_test.py  start_gui.py  start_main_gui.py  test_dpi_fix.py  test_matching_features.py  test_matching_simple.py  verify_matching_dialog.py  verify_test_features.py
core/: constants.py  ocr.py  opencv_util.py
dgocr/: __init__.py  det.py  det_seglink.py  dgocr.py  rec.py  utils.py  utils_seglink.py  visual.py
doc/: PRD_游戏自动化系统.md  design.md  requirements.md
gui/: __init__.py  main_gui.py  template_creator_gui.py
gui/core/: __init__.py  coordinate_converter.py  game_executor.py  image_matcher.py  process_main.py  report_generator.py  template_manager.py  window_controller.py
modules/: boss.py  daily.py  experience.py  spacetime.py  trial.py
src/: game_executor.py  image_matcher.py  main_gui.py  process_main.py  report_generator.py  template_creator_gui.py  template_manager.py  window_controller.py
test/: basic_test.py  demo_matching_test.py  demo_new_gui.py  final_matching_test_verification.py  simple_dpi_test.py  test_creator_fixes.py  test_dpi_fix.py  test_integrated_creator.py  test_intro_page_fix.py  test_intro_simple_fix.py  test_matching_features.py  test_matching_simple.py  test_template_features.py  test_template_list.py  verify_intro_fix.py  verify_list_fix.py  verify_matching_dialog.py  verify_test_features.py
util/: constants.py  device.py  ocr.py  window.py
(+10 files in other folders)
